--- a/NugetScanner.csproj
+++ b/NugetScanner.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
     <PackageReference Include="Serilog" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+    <PackageReference Include="serilog.sinks.file.archive" Version="1.0.3" />
+    <PackageReference Include="serilog.sinks.file.gzip" Version="1.0.2" />
     <PackageReference Include="serilog.sinks.http" Version="8.0.0" />
     <PackageReference Include="Serilog.Sinks.TestCorrelator" Version="3.2.0" />
     <PackageReference Include="Serilog.Sinks.XUnit" Version="3.0.5" />
